# rustpbx

./: .gitignore  Cargo.toml  diesel.toml  prototype-index.html
.UI/: 4iiz-figma-action-plan.md
.UI-AITools/: aitools-analysis.md
.UI-Contacts/: contacts-analysis.md
.UI-Flows/: flows-analysis.md
.UI-Numbers/: numbers-analysis.md
.UI-Reports/: reports-analysis.md
.UI-TrustCenter/: trustcenter-analysis.md
config/: groq-sensevoice-wrapper.py
docs/: ARCHITECTURE.html  ARCHITECTURE.md  ARCHITECTURE_OPPORTUNITIES.md  ARCHITECTURE_VISION.md  FEATURE_OVERLAP_ANALYSIS.md  FUNCTIONAL_TESTS.md  NORTH_STAR_CONCEPT.md  PROJECT_OVERVIEW.md  TESTING_PLAN_OF_ACTION.md  TESTING_STRATEGY.md  TEST_ENVIRONMENT_SETUP.md  code-review-report.md  configuration-reference.md  deployment-guide.md  developer-guide.md  github-issue-ack-routing.md  github-issue-transcript-sipflow.md  md-to-pdf.js  package-lock.json  package.json  scalability-tuning-guide.md
features/: intent_clarification.en.md  intent_clarification.zh.md
scripts/: backup-config.sh  backup-recordings.sh  backup.sh  gen_schema.py  upstream-issue.sh  upstream-sync.sh
src/: app.rs  config.rs  lib.rs  license.rs
static/: phone_sipjs.html
tests/: .gitignore  Dockerfile.test-tools  call_quality_test.py  (+26 more)
ui/: .gitignore  Cargo.toml  Trunk.toml  index.html  input.css
ui/src/: main.rs
ui/src/api/: mod.rs  types.rs
ui/src/components/: detail_panel.rs  filter_bar.rs  mod.rs  phone_drawer.rs
ui/src/sections/: activities.rs  ai_tools.rs  contacts.rs  flows.rs  mod.rs  numbers.rs  reports.rs  trust_center.rs
(+297 files in other folders)
