[package]
name = "rustpbx-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos-daisyui-rs = { path = "../../leptos-daisyui-rs" }

leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_icons = "0.6.1"
leptos_meta = "0.8.4"
icondata = "0.6.0"

wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }

console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
log = "0.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
